fix: visual editor of rich text editor not wrapping inner text, needed to set fixed width on modal after 1024px screen width

--- a/css/main.css
+++ b/css/main.css
@@ -641,8 +641,7 @@ tile-context-menu input {
 }
 @media (min-width: 1024px) {
   .overlay div.wrapper:not(.note):not(.statuses) {
-    width: unset;
-    min-width: 80rem;
+    width: 80rem;
   }
 }
 
